@@ -412,23 +412,25 @@ See `methods-by-applicability'.")
       (all-slots-for-inspector gf))))
 
 (defmethod emacs-inspect ((method standard-method))
+  `(,@(if (swank-mop:method-generic-function method)
           `("Method defined on the generic function " 
-	    (:value ,(swank-mop:method-generic-function method)
-		    ,(inspector-princ
-		      (swank-mop:generic-function-name
-		       (swank-mop:method-generic-function method))))
-            (:newline)
-	    ,@(docstring-ispec "Documentation" method t)
-            "Lambda List: " (:value ,(swank-mop:method-lambda-list method))
-            (:newline)
-            "Specializers: " (:value ,(swank-mop:method-specializers method)
-                                     ,(inspector-princ (method-specializers-for-inspect method)))
-            (:newline)
-            "Qualifiers: " (:value ,(swank-mop:method-qualifiers method))
-            (:newline)
-            "Method function: " (:value ,(swank-mop:method-function method))
-            (:newline)
-            ,@(all-slots-for-inspector method)))
+            (:value ,(swank-mop:method-generic-function method)
+                    ,(inspector-princ
+                      (swank-mop:generic-function-name
+                       (swank-mop:method-generic-function method)))))
+          '("Method without a generic function"))
+      (:newline)
+      ,@(docstring-ispec "Documentation" method t)
+      "Lambda List: " (:value ,(swank-mop:method-lambda-list method))
+      (:newline)
+      "Specializers: " (:value ,(swank-mop:method-specializers method)
+                               ,(inspector-princ (method-specializers-for-inspect method)))
+      (:newline)
+      "Qualifiers: " (:value ,(swank-mop:method-qualifiers method))
+      (:newline)
+      "Method function: " (:value ,(swank-mop:method-function method))
+      (:newline)
+      ,@(all-slots-for-inspector method)))
 
 (defmethod emacs-inspect ((class standard-class))
           `("Name: " (:value ,(class-name class))
